--- a/assets/css/home_mike_css.css
+++ b/assets/css/home_mike_css.css
@@ -180,6 +180,14 @@ a, a:visited, .link {
     position: absolute;
     cursor: pointer;
     margin: 0px 0px 0px 60px;
+/*    background-image: url('../images/piggyback_button_add_f1.png');*/
+    background: url('../images/piggyback_button_add_f1.png') no-repeat;
+    width: 30px;
+    height: 30px;
+}
+
+#add-list-button:hover {
+    background-image: url('../images/piggyback_button_add_f2.png');
 }
 
 #scrollable-sections-holder {
@@ -209,7 +217,7 @@ a, a:visited, .link {
 }
 
 #lists li {
-    margin: 5px 0px 0px 10px;
+    margin: 5px 0px 0px 7px;
     font-size: 14px;
     cursor: pointer;
     list-style-type: none;
@@ -232,20 +240,38 @@ a, a:visited, .link {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+.refer-my-list-wrapper img {
+    padding-top:3px;
+    padding-right:0px;
+    margin-right:0px;
+    display: inline;
+    position: absolute;
+    right: 5px;
+}
+
+.refer-my-list-wrapper {
+/*    display:inline-block;
+    width:40px;
+    height:16px;
+    float:right;*/
+}
 
 .delete-my-list {
     cursor: pointer;
     color: red;
+    vertical-align:-3px;
 }
 
 .my-list {
     cursor: pointer;
     position: absolute;
     margin: 0px 0px 0px 10px;
+    vertical-align:top;
 }
 
-.refer-my-list {
+span.refer-my-list {
     cursor: pointer;
+    right: 0px;
     position: absolute;
     margin: 0px 0px 0px 170px;
 }
@@ -261,22 +287,88 @@ a, a:visited, .link {
     z-index: -1;
 }
 
-.accordion-remove {
+.vendor-name {
+    margin: 10px 0 0 0;
+}
+
+.ui-tabs .ui-tabs-nav li.ui-tabs-selected a, .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-state-processing a {
+    cursor: pointer;
+}
+
+/*.accordion-remove {
     position: absolute;
     right: 10px;
     top: 10px;
     text-align: right;
     width: auto;
     color: #b8b7b7;
+}*/
+
+#content {
+    
 }
 
-.vendor-list-comment {
+ul.ui-tabs-nav {
+/*    position: fixed;*/
+/*    background-color: white;*/
+/*    z-index: 100;*/
+/*    clear: both;*/
+}
+
+#inbox-content, #search-content, #list-content, #friend-activity-content, #referral-tracking-content {
+/*    margin-top: 200px;*/
+/*    padding-top: 200px;*/
+    
+}
+
+.referral-list-vendor-add-to-list, .referral-list-vendor-refer {
+/*    top: 3px;*/
+}
+
+.list-item-wrapper .single-wrapper {
+    height: 100%;
+}
+
+div.single-wrapper {
+    height: 100%;
+}
+
+.list-item-wrapper {
+    padding: 0;
+    margin: 0;
+    border: 1px solid #ffffff;
+    background-color: #f2f2f2;
+}
+
+.accordion-remove {
+    position: absolute;
+    right: 151px;
     display: inline;
-    font-size: 0.75em;
-    line-height: 200%;
+    color: #b8b7b7;
+    font-size: 14px;
+    margin: 5px 5px 0 0;
 }
 
 .accordion-edit-comment {
+    color: #b8b7b7;
+    font-size: 13px;
+    margin: 0 0 0 10px;
+}
+
+.vendor-list-comment {
+/*    display: block;*/
+    font-size: 0.75em;
+/*    height: 100%;*/
+/*    margin-right: 190px;*/
+/*    max-width: 70%;*/
+}
+
+.comment-and-edit-block {
+    display: block;
+    max-width: 75%;
+}
+
+/*.accordion-edit-comment {
     display: inline;
     right: 10px;
     top: 31px;
@@ -285,7 +377,7 @@ a, a:visited, .link {
     color: #b8b7b7;
     font-size: 0.75em;
     line-height: 200%;
-}
+}*/
 
 .accordion-list-header {
     height: 60px;
