--- a/assets/css/home_andy_css.css
+++ b/assets/css/home_andy_css.css
@@ -22,6 +22,26 @@ div.referral-item-wrapper {
     margin-bottom:20px;
     border: 1px solid #ffffff;
     background-color: #f2f2f2;
+    
+    -moz-border-radius-topleft: 10px; 
+    -webkit-border-top-left-radius: 10px; 
+    -khtml-border-top-left-radius: 10px; 
+    border-top-left-radius: 10px;
+    
+    -moz-border-radius-topright: 10px; 
+    -webkit-border-top-right-radius: 10px; 
+    -khtml-border-top-right-radius: 10px; 
+    border-top-right-radius: 10px;
+    
+    -moz-border-radius-bottomleft: 10px; 
+    -webkit-border-bottom-left-radius: 10px; 
+    -khtml-border-bottom-left-radius: 10px; 
+    border-bottom-left-radius: 10px;
+    
+    -moz-border-radius-bottomright: 10px; 
+    -webkit-border-bottom-right-radius: 10px; 
+    -khtml-border-bottom-right-radius: 10px; 
+    border-bottom-right-radius: 10px;
 /*    position: relative;*/
 }
 
@@ -104,7 +124,7 @@ div.button-row {
     float: right;
     top: 0;
     right: 0;
-    width: 190px;
+    width: 250px;
     margin: 15px;
 }
 
@@ -161,11 +181,33 @@ img.click-to-like img:hover {
 
 
 div.number-of-likes {
-    position: relative;
+/*    position: relative;
     display: inline;
     padding-top: 5px;
     padding-bottom: 5px;
-    margin-left: 5%;
+    margin-left: 5%;*/
+    display:inline;
+    background: url('../images/piggyback_button_like_counter_bg.png') 50% 50% no-repeat;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-right:4px;
+    padding-left:0px;
+    float:right;
+    height:28px;
+    width:42px;
+}
+
+.number-of-likes-inner {
+    position:absolute;
+    height:26px;
+    width:42px;
+    top:15%;
+/*    top:50%;
+    margin-top:-13px;*/
+    color:white;
+    font-weight:bold;
+    font-size:16px;
+    text-align:center;
 }
 
 div.show-all-comments-button {
