--- a/assets/css/home_kim_css.css
+++ b/assets/css/home_kim_css.css
@@ -95,6 +95,7 @@ root {
 
 #tags {
     width:70%;
+    margin-right: 7px;
 }
 
 #searchFriendsButton {
@@ -133,10 +134,10 @@ root {
     valign:middle;
 }
 
-.added-friends tr:hover {
+/*.added-friends tr:hover {
     background-color:white;
 
-}
+}*/
 
 img.delete {
     cursor:pointer;
@@ -178,19 +179,23 @@ img.delete {
     background-color: white;
 }
 
-/*#add-to-new-list {
-    padding-top: 8px;
-    background-image: url(../../../images/piggyback_button_submit_f1.png);
-}*/
+#edit-list-comment-dialog {
+    font-family:helvetica;
+    height:20px;
+    padding-top:.4em;
+    padding-bottom:0px;
+    background-color: white;
+}
 
-/*#addToListDialog .ui-button .ui-dialog {
-    background-image: url(../../../images/piggyback_button_submit_f1.png);
-}*/
+#edit-list-comment-form {
+    padding: 2px 10px 0px 12px;
+}
 
-/*.add-to-list-button {
-    background-image: url(../../../images/piggyback_button_submit_f1.png);
-}*/
+.edit-list-comment-value {
+    width: 90%;
+}
 
+/* dialog buttons that show 'submit' button */
 .add-button button, #add-list-submit {
     background-color:white;
     border:0px;
@@ -212,6 +217,54 @@ img.delete {
     color:yellow;
     padding:0px;
 }
+/*-------------------------*/
+
+
+/*buttons for delete confirmation dialog*/
+#delete-button {
+    background-color:white;
+    border:0px;
+    background-image: url('../images/piggyback_button_submit_f1.png');
+    background-size: 100%;
+    width:74px;
+    height:30px;
+    color:yellow;
+    padding:0px;
+}
+
+#delete-button:hover{
+    background-color:white;
+    border:0px;
+    background-image: url('../images/piggyback_button_submit_f2.png');
+    background-size: 100%;
+    width:74px;
+    height:30px;
+    color:yellow;
+    padding:0px;
+}
+
+#cancel-delete-button {
+    background-color:white;
+    border:0px;
+    background-image: url('../images/piggyback_button_close_f1.png');
+    background-size: 100%;
+    width:74px;
+    height:30px;
+    color:yellow;
+    padding:0px;
+}
+
+#cancel-delete-button:hover {
+    background-color:white;
+    border:0px;
+    background-image: url('../images/piggyback_button_close_f2.png');
+    background-size: 100%;
+    width:74px;
+    height:30px;
+    color:yellow;
+    padding:0px;
+}
+/*-------------------------*/
 
 .ui-dialog-buttonset {
     padding-left:0px;
@@ -385,4 +438,15 @@ input.comment-input {
     max-height: 250px;
     font-size:13px;
 /*background-color:rgba(0,0,255,0.2);*/
+}
+
+/*.is-liked {
+    background: url('../images/piggyback_button_like_counter_bg.png') no-repeat;
+    width:42px;
+    height:28px;
+}*/
+
+#confirm-delete-msg {
+   padding: 5px 10px 0px 12px;
+
 }
