--- a/assets/css/home_mike_css.css
+++ b/assets/css/home_mike_css.css
@@ -338,6 +338,26 @@ div.single-wrapper {
     margin: 0;
     border: 1px solid #ffffff;
     background-color: #f2f2f2;
+    
+    -moz-border-radius-topleft: 10px; 
+    -webkit-border-top-left-radius: 10px; 
+    -khtml-border-top-left-radius: 10px; 
+    border-top-left-radius: 10px;
+    
+    -moz-border-radius-topright: 10px; 
+    -webkit-border-top-right-radius: 10px; 
+    -khtml-border-top-right-radius: 10px; 
+    border-top-right-radius: 10px;
+    
+    -moz-border-radius-bottomleft: 10px; 
+    -webkit-border-bottom-left-radius: 10px; 
+    -khtml-border-bottom-left-radius: 10px; 
+    border-bottom-left-radius: 10px;
+    
+    -moz-border-radius-bottomright: 10px; 
+    -webkit-border-bottom-right-radius: 10px; 
+    -khtml-border-bottom-right-radius: 10px; 
+    border-bottom-right-radius: 10px;
 }
 
 .accordion-remove {
